--- a/facy/facy.UWP/MainPage.xaml
+++ b/facy/facy.UWP/MainPage.xaml
@@ -10,6 +10,6 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+        <CaptureElement Name="PreviewControl" Stretch="Uniform"/>
     </Grid>
 </forms:WindowsPage>
