--- a/facy/facy.UWP/MainPage.xaml
+++ b/facy/facy.UWP/MainPage.xaml
@@ -1,4 +1,4 @@
-﻿<forms:WindowsPage
+﻿<Page
     x:Class="facy.UWP.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:forms="using:Xamarin.Forms.Platform.UWP"
@@ -6,10 +6,9 @@
     xmlns:local="using:facy.UWP"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    mc:Ignorable="d">
+<Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <CaptureElement Name="PreviewControl" Stretch="Uniform"/>
+</Grid>
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <CaptureElement Name="PreviewControl" Stretch="Uniform"/>
-    </Grid>
-</forms:WindowsPage>
+</Page>
