--- a/facy/facy.UWP/MainPage.xaml
+++ b/facy/facy.UWP/MainPage.xaml
@@ -9,6 +9,12 @@
     mc:Ignorable="d">
 <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
     <CaptureElement Name="PreviewControl" Stretch="Uniform"/>
-</Grid>
+        
+            <TextBlock x:Name="textResults" Margin="10,0,10,10" Width="280"
+                    Foreground="White" FontSize="18" TextWrapping="WrapWholeWords"
+                    ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                    ScrollViewer.VerticalScrollBarVisibility="Auto"/>
+        
+    </Grid>
 
 </Page>
